--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-share": "^4.0.1",
     "redux": "^4.0.5",
     "typescript": "^3.7.4"
   },
